--- a/proiecttestare/src/main/resources/lang/messages.properties
+++ b/proiecttestare/src/main/resources/lang/messages.properties
@@ -15,4 +15,5 @@ enter_your_email=Enter your email
 enter_your_password=Enter your password
 remember-me=Remember me
 sign_in=Sign in
+log_out=Logout
 
