--- a/proiecttestare/src/main/resources/lang/messages.properties
+++ b/proiecttestare/src/main/resources/lang/messages.properties
@@ -16,4 +16,13 @@ enter_your_password=Enter your password
 remember-me=Remember me
 sign_in=Sign in
 log_out=Logout
+forgot_password=Forgot password
+sign_up=Sign up
+hi=Hi
+welcome_to_Ozzy_shop=Welcome to Ozzy's shop
+premium=Premium pet food manufacturer
+pet_food=Pet food
+read_more=Read more
+pure_natural=Pure & natural holistic pet foods for a long and healthy life
+
 
