Eu sunt Diana - update

--- a/proiecttestare/src/main/resources/lang/messages.properties
+++ b/proiecttestare/src/main/resources/lang/messages.properties
@@ -1,9 +1,5 @@
 hello=Hello!
 welcome=Welcome to my app
-switch-en=Switch to English
-switch-it=Switch to Italian
-
-nume-pagina=Aceasta esta pagina de home cu limba EN
 
 title=Responsive Pet Shop Website
 shop=Shop
@@ -18,11 +14,44 @@ sign_in=Sign in
 log_out=Logout
 forgot_password=Forgot password
 sign_up=Sign up
-hi=Hi
-welcome_to_Ozzy_shop=Welcome to Ozzy's shop
 premium=Premium pet food manufacturer
-pet_food=Pet food
 read_more=Read more
 pure_natural=Pure & natural holistic pet foods for a long and healthy life
-
+Yummy_treats=Yummy treats
+Healthy=Healthy and delicious rewards for pets with personality
+lei= 5.00 lei - 40 lei
+Toys=Toys & accessory
+We_have=We have everything you need to train and keep your pet happy, healthy, and strong
+from=From 15.00 lei
+our_products=Our products
+salmon_food=Salmon food
+leu=3.99 lei
+cod=cod fish dry food
+cat_food=28 x wet cat food with veal
+leu_l= 109 lei
+wet_cat_food=56 x wet cat food with trout 
+leu_z=207.20 lei
+monge=Monge adult light with salmon and rice 12 kg
+leu_x= 227.00 lei
+Monge_dogs=Monge Dogs Puppy&Junior with Salmon and Rice 12 kg
+our_services=our services
+leu_c=227.00 lei
+dog_boarding=dog boarding
+cat_boarding=cat boarding
+spa=spa & grooming
+healthy_meal=healthy meal
+activity_exercise=activity exercise
+health_care=health care
+contact_us=Contact us
+Please_check=Please check that your information were correctly saved
+OK=OK
+facebook=Facebook
+twitter =Twitter
+instagram=Instagram
+Created=Created by  Vrote Oana Diana
+your_name=Your name
+your_email=Your email
+your_number=Your phone number
+your_message=Your message
+send_message=Send message
 
