--- a/proiecttestare/src/main/resources/lang/messages_it.properties
+++ b/proiecttestare/src/main/resources/lang/messages_it.properties
@@ -1,12 +1,56 @@
 hello=Ciao!
 welcome=Benvenuti nella mia app
-switch-en=Passa all'inglese
-switch-it=Passa all'italiano
+title=Sito web reattivo del negozio di animali
+shop=Negozio
+home=Casa
+about=Informazioni
+services=Servizi
+contact=Contatto
+enter_your_email=serisci la tua email
+enter_your_password=Inserisci la tua password
+remember-me=Ricordati di me
+sign_in=Accedi
+log_out=Esci
+forgot_password=Password dimenticata
+sign_up=Iscriviti
+premium=Produttore di alimenti per animali di alta qualità
+read_more=Leggi di più
+pure_natural=Alimenti olistici puri e naturali per animali domestici per una vita lunga e sana
+Yummy_treats=Prelibatezze
+Healthy=Ricompense sane e deliziose per animali domestici con personalità
+lei=5,00 euro - 40 euro
+Toys=Giocattoli e accessori
+We_have=Abbiamo tutto ciò di cui hai bisogno per addestrare e mantenere il tuo animale domestico felice, sano e forte
+from=Dalle 15.00 euro
+our_products=I nostri prodotti
+salmon_food=Cibo al salmone
+leu= 3,99 euro
+cod=cibo secco per merluzzo
+cat_food=28 x cibo umido per gatti con carne di vitello
+leu_l=109 eur
+wet_cat_food=56 x cibo umido per gatti con trota
+leu_z=207,20 euro
+monge=Monge adulto light con salmone e riso 12 kg
+leu_x=227,00 euro
+Monge_dogs=Monge Cani Puppy&Junior con Salmone e Riso 12 kg
+our_services=i nostri servizi
+leu_c=227,00 euro
+dog_boarding=pensione per cani
+cat_boarding=trasporto per gatti
+spa=spa e toelettatura
+healthy_meal=pasto sano
+activity_exercise=esercizio di attività
+health_care=assistenza sanitaria
+contact_us=Contattaci
+Please_check=Verifica che le tue informazioni siano state salvate correttamente
+OK=OK
+facebook=Facebook
+twitter =Twitter
+instagram=Instagram
+Created=Creato da Vrote Oana Diana
+your_name=Il tuo nome
+your_email=La tua email
+your_number=Il tuo numero di telefono
+your_message=Il tuo messaggio
+send_message=Invia messaggio
 
-nume-pagina=Aceasta esta pagina de home cu limba IT
-title= Pagina de home
-shop=Shop
-home=Home
-about=About
-services=Services
-contact=Contact
